Just preventing page breaks on table rows

--- a/src/assets/scss/_pk-utility.scss
+++ b/src/assets/scss/_pk-utility.scss
@@ -454,3 +454,7 @@ table.pk-tbl {
 hr {
   @extend .border;
 }
+
+tr {
+  page-break-inside: avoid !important;
+}
